# tinch_pp

./: .gitmodules  .hgtags  .travis.yml  CMakeLists.txt  Doxyfile  README.md
impl/: CMakeLists.txt  actual_mailbox.cpp  actual_mailbox.h  actual_node.cpp  actual_node.h  constants.cpp  constants.h  control_msg.h  control_msg_exit.h  control_msg_exit2.h  control_msg_link.h  control_msg_reg_send.h  control_msg_send.h  control_msg_unlink.h  control_msgs_impl.cpp  ctrl_msg_dispatcher.cpp  ctrl_msg_dispatcher.h  epmd_protocol.h  epmd_requestor.cpp  epmd_requestor.h  erl_any.cpp  erl_cpp_exception.cpp  erl_cpp_exception.h  erl_string.cpp  erlang_value_types.cpp  exceptions.cpp  ext_message_builder.cpp  ext_message_builder.h  ext_term_grammar.h  handshake_grammar.h  link_policies.cpp  link_policies.h  linker.cpp  linker.h  list_matcher.h  mailbox_controller_type.h  matchable_range.cpp  matchable_range.h  matchable_seq.cpp  matchable_seq.h  (+21 more)
test/: CMakeLists.txt  chat_client.cpp  link_tester.erl  local_link.cpp  mbox_same_node_links.cpp  net_kernel_sim.cpp  patterns.cpp  patterns_testing_any.cpp  patterns_testing_assign.cpp  remote_link.cpp  rpc_test.cpp  thread_safe_queue.cpp
tinch_pp/: CMakeLists.txt  erl_any.h  erl_list.h  erl_object.h  erl_string.h  erl_tuple.h  erlang_types.h  erlang_value_types.h  exceptions.h  mailbox.h  make_erl_tuple.h  matchable.h  node.h  rpc.h  type_makers.h
